* A new helper class has been added called Text for manipulating
  text in widgets. It's utilised by both TextBox and TextField which
  has reduced the complexity of those widgets significantly.
* BasicContainer and Container now hos the ability to resize themselves
  to fit their content with BasicContainer::resizeToContent and 
  Container::resizeToContent.
* All enum constants have been renamed to avoid clashes with defines
  present in other libraries (read windows.h). Enum constants are now named
  the same ways as classes are. For example, the Key constant LEFT_SHIFT is 
  now named LeftShift.
* Fixed of ImageFont, DefaultFont and HGEImageFont to correctly override the
  const method Font::getStringIndexAt.
* TabbedArea::isOpaque and TabbedArea::setOpaque have been added to
  control if a tabbed area should draw its background or not.

Version 0.8.1
=============
* A couple of minor GCC 3.4.2. issues have been fixed.
* Add ons are now refered to as contribs all contribs have been added
  to the main source directory under the contrib directory. All
  contribs now also reside in a namespace called contrib.
* ScrollArea::isOpaque and ScrollArea::setOpaque have been added to
  control if a scroll area should draw its background or not.
* DELETE is now undefined in Key.hpp if present. It should hopefully
  take care of some problems with windows.h defining delete which
  sometimes breaks Key.hpp.
* Soname support has been fixed. The correct version number should
  now be used in the produced binaries.

Version 0.8.0
=============
* Widget::showPart has been added to be used when a specific
  part of a widget should be visible. An example is when a text
  area wants a specific text part to be visible in a scroll area.
  This function uses BasicContainer::showWidgetPart.
* ListBox::setWrappingKeyboardSelection and
  ListBox::isWrappingKeyboardSelection have been renamed to
  ListBox::setWrappingEnabled and ListBox::isWrappingEnabled.